--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,15 @@ security.basic.enabled=false
 # ===============================
 # JPA / HIBERNATE/ postgres
 # ===============================
-spring.datasource.url= jdbc:postgresql://localhost:5432/slpo
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url= jdbc:postgresql://localhost:5432/ssdg
 spring.datasource.username=postgres
 spring.datasource.password=xerox
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=slpo_aop
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.springframework.web=ERROR
  
 
