--- a/pom.xml
+++ b/pom.xml
@@ -87,14 +87,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>-->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-solr</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>net.sourceforge.htmlunit</groupId>
 			<artifactId>htmlunit</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
