added rest template codes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # Tomcat Configurations
 # ===============================
-server.context-path=/restapi
+#server.context-path=/restapi
 server.port=8088
 # ===============================
 # Spring Security
@@ -11,16 +11,23 @@ spring.security.enabled=false
 management.security.enabled=false
 security.basic.enabled=false
 # ===============================
-# JPA / HIBERNATE/ postgres
+# JPA / HIBERNATE/ postgres/H2
 # ===============================
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/ssdg
-spring.datasource.username=postgres
-spring.datasource.password=xerox
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.default_schema=slpo_aop
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url= jdbc:postgresql://localhost:5432/ssdg
+#spring.datasource.username=postgres
+#spring.datasource.password=xerox
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.default_schema=slpo_aop
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:~/h2/testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+
 
 logging.level.org.springframework.web=ERROR
  
